/*
 * Copyright 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package journal.record;

message JournalRecord {
  string producer_id = 1;
  uint64 pkid = 2;
  string key = 3;
  bytes content = 4;
  uint64 create_time = 5;
  repeated string tags = 6;
  int64 offset = 7;
  string shard_name = 9;
  uint32 segment = 10;
}